"fix look on firefox"

--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,7 @@ body {
 .home {
     display: flex;
     justify-content: center;
-    min-height: 89dvh;
+    min-height: 100dvh;
     background: url(./assets/home_background.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -150,7 +150,7 @@ body {
 /* start of game page */
 .game {
     background: url(./assets/forest.jpg);
-    min-height: 89dvh;
+    min-height: 100dvh;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     overflow: hidden;
@@ -161,8 +161,13 @@ body {
     margin-top: 100px;
     min-width: 600px;
     min-height: 300px;
-    place-self: center;
     backdrop-filter: blur(20px);
+    display: flex;
+    flex-direction: column;
+}
+
+.game .overlay h1 {
+    place-self: center;
 }
 
 .game h1 {
@@ -247,7 +252,7 @@ body {
 
 .favourites {
     background: url(./assets/favourites_background.jpg);
-    min-height: 89dvh;
+    min-height: 100dvh;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     overflow: hidden;
